--- a/angular.json
+++ b/angular.json
@@ -27,21 +27,17 @@
               "src/favicon.ico",
               "src/assets",
               "src/_redirects"
-
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css" 
-
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              
-          "node_modules/jquery/dist/jquery.min.js",
-          "node_modules/popper.js/dist/umd/popper.min.js",
-          "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
-           
           },
           "configurations": {
             "production": {
@@ -100,7 +96,7 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -134,6 +130,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angularProject"
+    }
+  },
+  "defaultProject": "angularProject",
+  "cli": {
+    "analytics": false
+  }
 }
